TEST_PROGRAMS/INVALID/eric_ditomasso/invalidstrings.min
# testing invalid string characters
var str: string;

str = "abc^";

print str;
